Replace placeholders with imports

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,7 +1,4 @@
 {
-  "extends": "@run-z/project-config/tsconfig.lib.json",
-  "compilerOptions": {
-    "outDir": "target/js"
-  },
+  "extends": "./tsconfig.json",
   "include": ["src/spec/*.ts"]
 }
