--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@run-z/project-config": "^0.15.5",
     "@swc/core": "^1.3.52",
     "@swc/jest": "^0.2.26",
+    "@types/node": "^18.15.12",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "churi": "^0.6.0",
