--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "5.0.4 - 5.1.0"
   },
   "dependencies": {
+    "@proc7ts/primitives": "^4.0.0",
     "@run-z/npk": "^0.1.0"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "churi": "^0.6.0",
+    "churi": "^0.6.1",
     "eslint": "^8.39.0",
     "eslint-plugin-jest": "^27.2.1",
     "gh-pages": "^5.0.0",
