--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@run-z/project-config/tsconfig.lib.json",
   "compilerOptions": {
+    "rootDir": "./src",
     "outDir": "target/js",
     "typeRoots": ["node_modules/@types"],
     "types": ["node"]
