--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "@proc7ts/primitives": "^4.0.0",
-    "@run-z/npk": "^0.1.0"
+    "@run-z/npk": "^0.1.0",
+    "httongue": "^3.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -41,7 +42,7 @@
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
-    "churi": "^0.6.2",
+    "churi": "^0.6.3",
     "eslint": "^8.39.0",
     "eslint-plugin-jest": "^27.2.1",
     "gh-pages": "^5.0.0",
