--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
     "rollup": "^3.21.0",
-    "run-z": "1.11.0-bootstrap",
+    "run-z": "^1.11.0",
     "ts-jest": "^29.1.0",
     "tslib": "^2.5.0",
     "typedoc": "^0.24.6",
@@ -60,8 +60,7 @@
   },
   "scripts": {
     "all": "run-z build,lint,test",
-    "bootstrap": "build-z",
-    "build": "run-z +z bootstrap",
+    "build": "run-z +z --then build-z",
     "ci:all": "run-z all +test/--ci/--runInBand",
     "clean": "run-z +z --then clean-z",
     "doc": "run-z +z --then typedoc",
