--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "typescript": "5.0.4 - 5.1.0"
   },
   "dependencies": {
-    "@proc7ts/primitives": "^4.0.0",
+    "@proc7ts/primitives": "4.0.1",
     "@run-z/npk": "^0.2.0",
     "httongue": "^3.0.0"
   },
@@ -41,8 +41,8 @@
     "@swc/core": "^1.3.59",
     "@swc/jest": "^0.2.26",
     "@types/node": "^18.16.14",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "churi": "^0.8.0",
     "eslint": "^8.41.0",
     "eslint-plugin-jest": "^27.2.1",
@@ -52,7 +52,7 @@
     "jest-mock": "^29.5.0",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
-    "rollup": "^3.22.1",
+    "rollup": "^3.23.0",
     "run-z": "^1.11.0",
     "ts-jest": "^29.1.0",
     "tslib": "2.5.0",
