--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "sideEffects": false,
   "peerDependencies": {
-    "churi": "^0.8.0",
+    "churi": "^0.9.0",
     "typescript": "5.0.4 - 5.2.0"
   },
   "dependencies": {
     "@proc7ts/primitives": "4.0.1",
     "@run-z/npk": "^0.6.0",
-    "httongue": "^3.1.0"
+    "esgen": "^0.2.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -43,7 +43,7 @@
     "@types/node": "^18.16.16",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "churi": "^0.8.0",
+    "churi": "^0.9.0",
     "eslint": "^8.42.0",
     "eslint-plugin-jest": "^27.2.1",
     "gh-pages": "^5.0.0",
