--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "@proc7ts/primitives": "4.0.1",
     "@run-z/npk": "^0.6.0",
-    "esgen": "^0.2.9"
+    "esgen": "^0.2.9",
+    "httongue": "^3.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.6.1",
