--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "sideEffects": false,
   "peerDependencies": {
-    "churi": "^0.11.0",
+    "churi": "^0.15.0-pre.0",
     "typescript": "5.0.4 - 5.3.0"
   },
   "dependencies": {
@@ -44,7 +44,7 @@
     "@types/node": "^18.17.11",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "churi": "^0.14.0",
+    "churi": "^0.15.0-pre.0",
     "eslint": "^8.48.0",
     "eslint-plugin-jest": "^27.2.3",
     "gh-pages": "^6.0.0",
