--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "target/js",
     "rootDir": "./src",
+    "skipLibCheck": true,
     "typeRoots": ["node_modules/@types"],
     "types": ["node"]
   },
